Migrated to the new API router
